1.搭建结构 2.数据库连接
